[build-system]
requires = ["setuptools>=59.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TestZli"
version = "1.0"
authors = [
  { name="Zli06160", email="zli06160@zli06160.com" },
]
description = "A personal practice repo"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zli06160/TestZli"
"Bug Tracker" = "https://github.com/zli06160/TestZli/issues"